--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <button onclick="todoDisplay()">Devam Et <i class="fa fa-arrow-circle-right"></i></button>
             </section>
         </article>
-
         <article id="todoContainer">
             <header>
                 <input type="text" placeholder="bir şeyler yazınız..." id="inputTodo">
                 <button onclick="addTodo()">Ekle</button>
             </header>
             <section>
+                <div hidden id="spinner"></div>
             </section>
         </article>
     </main>
